<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/>
    </parent>

    <groupId>com.foggy.navigator</groupId>
    <artifactId>foggy-navigator-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Foggy Navigator</name>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <!-- 公共模块（最先编译） -->
        <module>navigator-common</module>
        <module>navigator-spi</module>
        <!-- 业务模块 -->
        <module>agent-framework</module>
        <module>user-auth-module</module>
        <module>metadata-config-module</module>
        <module>session-module</module>
        <module>business-agent-module</module>
        <module>addons/claude-worker-agent</module>
        <module>addons/langgraph-biz-worker</module>
        <module>addons/codex-worker-agent</module>
        <module>addons/gemini-worker-agent</module>
        <module>addons/task-assistant</module>
        <!-- Open API SDK（独立模块，供第三方系统引入） -->
        <module>navigator-open-sdk</module>
        <!-- 本地观测/上游集成 BFF（供 Chat Widget Real Navigator 模式调试） -->
        <module>tools/navigator-chat-observer-bff</module>
        <!-- 启动器模块（最后编译，依赖其他所有模块） -->
        <module>launcher</module>
    </modules>
</project>
